--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 bottle==0.12.13
+certifi==2018.10.15
+chardet==3.0.4
 gunicorn==19.6.0
-requests==2.13.0
-wsgiref==0.1.2
+idna==2.7
+requests==2.20.0
+urllib3==1.24.1
